Fix login form vertical alignment

--- a/web/css/home.css
+++ b/web/css/home.css
@@ -93,6 +93,7 @@ text-align:center;
   background: #FFFFFF;
   max-width: 300px;
   margin: 0 auto 10px;
+  margin-top: 100px;
   padding: 30px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -282,7 +283,7 @@ table#teams tr:nth-child(even) {
   position: relative;
   width: 24em;
   height: 24em;
-  padding: 2.8em; 
+  padding: 2.8em;
   margin-bottom: 2em;
   left: 25em;
 }
@@ -292,7 +293,7 @@ table#teams tr:nth-child(even) {
   top: 50%;
   width: 8em;
   height: 8em;
-  margin: -2em; 
+  margin: -2em;
   border-radius: 50%;
 }
 
@@ -316,7 +317,7 @@ table#teams tr:nth-child(even) {
 
 /*Below is the css for the math challenge page. */
 
-.floated_left 
+.floated_left
 {
   float: left;
   width: 500px;
@@ -325,18 +326,18 @@ table#teams tr:nth-child(even) {
   text-justify: inter-word;
 
     /* outer shadows  (note the rgba is red, green, blue, alpha) */
-  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4); 
+  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0px 1px 6px rgba(23, 69, 88, .5);
 
   /* rounded corners */
   -webkit-border-radius: 12px;
-  -moz-border-radius: 7px; 
+  -moz-border-radius: 7px;
   border-radius: 7px;
 
 /* gradients */
-  background: -webkit-gradient(linear, left top, left bottom, 
-  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9)); 
-  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%); 
+  background: -webkit-gradient(linear, left top, left bottom,
+  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9));
+  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%);
 }
 
 .floated_right
@@ -348,18 +349,18 @@ table#teams tr:nth-child(even) {
     text-align: justify;
     text-justify: inter-word;
   /* outer shadows  (note the rgba is red, green, blue, alpha) */
-  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4); 
+  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0px 1px 6px rgba(23, 69, 88, .5);
 
   /* rounded corners */
   -webkit-border-radius: 12px;
-  -moz-border-radius: 7px; 
+  -moz-border-radius: 7px;
   border-radius: 7px;
 
   /* gradients */
-  background: -webkit-gradient(linear, left top, left bottom, 
-  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9)); 
-  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%); 
+  background: -webkit-gradient(linear, left top, left bottom,
+  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9));
+  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%);
 }
 
 .floated_middle
@@ -371,18 +372,18 @@ table#teams tr:nth-child(even) {
  text-align: justify;
   text-justify: inter-word;
   /* outer shadows  (note the rgba is red, green, blue, alpha) */
-  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4); 
+  -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0px 1px 6px rgba(23, 69, 88, .5);
 
   /* rounded corners */
   -webkit-border-radius: 12px;
-  -moz-border-radius: 7px; 
+  -moz-border-radius: 7px;
   border-radius: 7px;
 
   /* gradients */
-  background: -webkit-gradient(linear, left top, left bottom, 
-  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9)); 
-  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%); 
+  background: -webkit-gradient(linear, left top, left bottom,
+  color-stop(0%, white), color-stop(35%, white), color-stop(100%, #33A1C9));
+  background: -moz-linear-gradient(top, white 0%, white 55%, #33A1C9 130%);
 
 }
 
@@ -400,9 +401,9 @@ header{
 
 }
 
-.gradientBoxesWithOuterShadows { 
+.gradientBoxesWithOuterShadows {
 height: 200px;
-width: 400px; 
+width: 400px;
 padding: 20px;
 
 }
@@ -414,7 +415,7 @@ padding: 20px;
   column-count: 5;
 
   -webkit-column-rule: 1px outset #003366;
-  -moz-column-rule: 1px outset #003366; 
+  -moz-column-rule: 1px outset #003366;
   column-rule: 1px outset #003366;
 }
 
